--- a/process/building-permit.html
+++ b/process/building-permit.html
@@ -53,7 +53,7 @@
                   <ul class="dropdown-menu">
                     <li><a href="../why-palau.html">Overview</a></li>
                     <li><a href="#">Infrastructure</a></li>
-                    <li><a href="#">Incentives</a></li>
+                    <li><a href="../incentives.html">Incentives</a></li>
                   </ul>
                 </li>
 
