--- a/resources/all-applications.html
+++ b/resources/all-applications.html
@@ -53,7 +53,7 @@
                   <ul class="dropdown-menu">
                     <li><a href="../why-palau.html">Overview</a></li>
                     <li><a href="#">Infrastructure</a></li>
-                    <li><a href="#">Incentives</a></li>
+                    <li><a href="../incentives.html">Incentives</a></li>
                   </ul>
                 </li>
 
@@ -136,6 +136,9 @@
             <li><a href="../applications/national/domestic-corporation.pdf">
               Information Required For Forming A Domestic Corporation
             </a></li>
+            <li><a href="../applications/national/partnership-application.pdf">
+              Partnership Registration Statement
+            </a></li>
             <li><a href="../applications/national/fib-requirement.pdf">
               Foreign Investment Bureau Basic Requirement For Establishing A Business In Palau
             </a></li>
@@ -154,7 +157,9 @@
             <li><a href="../applications/national/nonresident-worker-application.pdf">
               Nonresident Worker Application
             </a></li>
-            <li><a href="../applications/national/"
+            <li><a href="../applications/national/nonresident-worker-renewal.pdf">
+              Application For The Extension of a Work Permit For A Nonresident Worker
+            </a></li>
             <li><a href="../applications/national/ssn-application.pdf">
               Employee Social Security Registration
             </a></li>
@@ -210,35 +215,55 @@
             <li><a href="../applications/state/koror/koror-business-license.pdf">
               Koror State Business License
             </a></li>
+            <li><a href="../applications/state/koror/koror-building-zoning-permit.pdf">
+              Koror State Building and Zoning Permit
+            </a></li>
             <li><a href="">
               Koror State Signage Permit
             </a></li>
+            <li><a href="../applications/state/koror/koror-checklist.pdf">
+              Koror State Building and Zoning Checklist
             <li><a href="">
               Melekeok State Business License
             </a></li>
-            <li><a href="">
+            <li><a href="../applications/state/ngaraard/ngaraard-business-license.pdf">
               Ngaraard State Business License
             </a></li>
-            <li><a href="">
+            <li><a href="../applications/state/ngaraard/ngaraard-building-permit.pdf">
+              Ngaraard State Building Permit
+            </a></li>
+            <li><a href="../applications/state/ngarchelong/ngarchelong-business-license.pdf">
               Ngarchelong State Business License
             </a></li>
-            <li><a href="">
+            <li><a href="../applications/state/ngarchelong/narchelong-building-perpmit.pdf">
+              Ngarchelong State Building Permit
+            </a></li>
+            <li><a href="../applications/state/ngardmau/ngardmau-business-license.pdf">
               Ngardmau State Business License
             </a></li>
-            <li><a href="">
+            <li><a href="../applications/state/ngardmau/ngardmau-building-permit.pdf">
+              Ngardmau State Building Permit
+            </a></li>
+            <li><a href="../applications/state/ngeremlengui/ngeremlengui-business-license.pdf">
               Ngeremlengui State Business License
             </a></li>
-            <li><a href="">
+            <li><a href="../applications/state/ngeremlengui/ngeremlengui-building-permit.pdf">
+              Ngeremlengui State Building Permit
+            </a></li>
+            <li><a href="../applications/state/ngatpang/ngatpang-business-license.pdf">
               Ngatpang State Business License
             </a></li>
-            <li><a href="">
+            <li><a href="../applications/state/ngchesar/ngchesar-business-license.pdf">
               Ngchesar State Business License
             </a></li>
-            <li><a href="">
+            <li><a href="../applications/state/ngiwal/ngiwal-business-license.pdf">
               Ngiwal State Business License
             </a></li>
-            <li><a href="">
+            <li><a href="../applications/state/peleliu/peleliu-business-license.pdf">
               Peleliu State Business License
+            </a></li>
+            <li><a href="../applications/state/peleliu/peleliu-building-permit.pdf">
+              Peleliu State Building Permit
             </a></li>
             <li><a href="">
               Sonsorol State Business License
