added link for melekeok app

--- a/resources/all-applications.html
+++ b/resources/all-applications.html
@@ -223,10 +223,13 @@
             </a></li>
             <li><a href="../applications/state/koror/koror-checklist.pdf">
               Koror State Building and Zoning Checklist
-            <li><a href="">
+            <li><a href="../applications/state/melekeok/melekeok-business-license.pdf">
               Melekeok State Business License
             </a></li>
-            <li><a href="../applications/state/ngaraard/ngaraard-business-license.pdf">
+            <li><a href="../applications/state/melekeok/melekeok-building-permit.pdf">
+              Melekeok State Building Permit
+            </a></li>
+            <li><a href="../applications/state/ngaraard/ngaraard-buisness-license.pdf">
               Ngaraard State Business License
             </a></li>
             <li><a href="../applications/state/ngaraard/ngaraard-building-permit.pdf">
