adds target_blank to links

--- a/resources/all-applications.html
+++ b/resources/all-applications.html
@@ -130,10 +130,10 @@
           </p>
           <h2>National Forms</h2>
           <ul>
-            <li><a href="../applications/national/national-business-license.pdf">
+            <li><a href="../applications/national/national-business-license.pdf" target="_blank">
               Application For A Business License
             </a></li>
-            <li><a href="../applications/national/domestic-corporation.pdf">
+            <li><a href="../applications/national/domestic-corporation.pdf" target="_blank">
               Information Required For Forming A Domestic Corporation
             </a></li>
             <li><a href="../applications/national/partnership-application.pdf">
