--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
       <div class="row featurette">
         <div class="col-md-8">
-          <h2>First featurette heading.</h2>
+          <h2>Why invest in Palau?</h2>
           <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
         </div>
         <div class="col-md-4">
@@ -168,7 +168,7 @@
 
       <div class="row featurette">
         <div class="col-md-8 col-md-push-4">
-          <h2>Second featurette heading.</h2>
+          <h2>Thriving business opportunities await.</h2>
           <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
         </div>
         <div class="col-md-4 col-md-pull-8">
@@ -180,7 +180,7 @@
 
       <div class="row featurette">
         <div class="col-md-8">
-          <h2>Third featurette heading.</h2>
+          <h2>How do I start the process?</h2>
           <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
         </div>
         <div class="col-md-4">
