changes name of homepage link on nav bar

--- a/resources/all-applications.html
+++ b/resources/all-applications.html
@@ -43,7 +43,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="../index.html">Project name</a>
+            <a class="navbar-brand" href="../index.html">Website Name </a>
           </div>
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
@@ -130,10 +130,10 @@
           </p>
           <h2>National Forms</h2>
           <ul>
-            <li><a href="../applications/national/national-business-license.pdf" target="_blank">
+            <li><a href="../applications/national/national-business-license.pdf">
               Application For A Business License
             </a></li>
-            <li><a href="../applications/national/domestic-corporation.pdf" target="_blank">
+            <li><a href="../applications/national/domestic-corporation.pdf">
               Information Required For Forming A Domestic Corporation
             </a></li>
             <li><a href="../applications/national/partnership-application.pdf">
