--- a/infrastructure.html
+++ b/infrastructure.html
@@ -52,8 +52,8 @@
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Why Palau?<span class="caret"></span></a>
                   <ul class="dropdown-menu">
                     <li><a href="why-palau.html">Overview</a></li>
-                    <li><a href="#">Infrastructure</a></li>
-                    <li><a href="incentives.html">Incentives</a></li>
+                    <li><a href="infrastructure.html">Infrastructure</a></li>
+                    <li><a href="#">Incentives</a></li>
                   </ul>
                 </li>
 
@@ -86,61 +86,35 @@
       </nav>
 
       <!-- Main content area -->
-<div class="row">
-    <div class="col-md-12">
-    <h1>Why Palau?</h1>
-    </div>
-</div>
-<div class="row">
-    <div class="col-md-12">
-    <h2>The Republic of Palau</h2>
-    <h3>Capital: Ngerulmud, Melekeok State</h3>
-    </div>
-</div>
-<div class="row">
-    <div class="col-md-6">
-    <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
-    </div>
-    <div class="col-md-6">
-    <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
-    </div>
-<div class="row">
-    <div class="col-md-12">
-    <p>The Compact of Free Association (1994) between the United States and Palau sets forth the free and voluntary association of their governments. Palau is composed of sixteen states, represented in a bicameral legislature. The President is head of government and the executive branch. The judiciary is independent of the executive and the legislature.
-    </p>
-    <h2>Geography</h2>
-    <ul>
-      <li>466 [508, 459] square kilometers</li>
-      <li>More than 1,500 kilometers of coastline</li>
-      <li>Largest city: Koror</li>
-      <li>Highest point: Mount Ngerchelchuus (242 meters)</li>
-      <li>Time zone: GMT+9</li>
-      <li>The scenery ranges from white sandy beaches with an abundance of marine life to mountains forested in dense jungle.</li>
-    </ul>
-    <h2>Climate</h2>
-    <ul>
-      <li>Tropical rain forest</li>
-      <li>Annual mean temperature of 28 °C</li>
-      <li>Rainy season: June through November</li>
-    </ul>
-    <h2>Economic and Demographic Data</h2>
-    <ul>
-      <li>Population: 21,347 (July 2016 estimate)</li>
-      <li>Literacy rate: 99.5%</li>
-      <li>Median age: 33.3 years</li>
-      <li>Major languages: Palauan, English</li>
-      <li>The largest economy in Micronesia</li>
-      <li>Income category: Upper middle income</li>
-      <li>GDP (purchasing power parity): $283.5 million (2016 estimate)</li>
-      <li>GDP-per capita (PPP): $15,300 (2016 estimate)</li>
-      <li>Palau uses the U.S. dollar as its currency.</li>
-      <li>90,000 [130,000] tourist arrivals annually</li>
-      <li>Stable government and regulatory environment</li>
-      <li>Low-tariff business environment</li>
-      <li>No personal income tax</li>
-    </ul>
-    </div>
-</div>
+      <div>
+        <h1>Infrastructure</h1>
+        <ul>Roman Tmetuchl International Airport
+          <li>XX international commercial flights daily.</li>
+          <li>Direct flights to Guam, Seoul, Taipei and Manila, with connections worldwide.</li>
+          <li>Complete, efficient freight-handling capabilities, processing XX tons of air cargo annually.</li>
+        </ul>
+        <ul>Modern port facilities in Malakal
+          <li>Xxx tons of cargo landed annually</li>
+          <li>Advantageously located on all Indo-Asian shipping lanes</li>
+        </ul>
+        <ul>Transportation
+          <li>Quick and easy country-wide distribution network facilitated by:</li>
+          <li>Xxx miles of highway and improved roads</li>
+          <li>xx passenger and cargo ferries daily</li>
+        </ul>
+        <ul>Telecommunications
+          <li>New fiber-optic cable with xxxx capacity</li>
+          <li>High-speed internet</li>
+          <li>Internet TLD: .pw</li>
+        </ul>
+        <ul>Utilities
+          <li>Electricity</li>
+          <li>Modern-era electrical grid with a nationwide capacity of xxxx kW</li>
+          <li>120V, 60Hz (North American plug)</li>
+          <li>Water and sanitation</li>
+          <li>Modern water and sanitation systems, currently undergoing improvement and expansion</li>
+        </ul> 
+      </div>
       <!-- End main content area -->
 
     </div> <!-- /container -->
