update nav links for infrstructure i think

--- a/process/foreign-investment.html
+++ b/process/foreign-investment.html
@@ -52,7 +52,7 @@
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Why Palau?<span class="caret"></span></a>
                   <ul class="dropdown-menu">
                     <li><a href="../why-palau.html">Overview</a></li>
-                    <li><a href="#">Infrastructure</a></li>
+                    <li><a href="../infrastructure.html">Infrastructure</a></li>
                     <li><a href="../incentives.html">Incentives</a></li>
                   </ul>
                 </li>
@@ -63,8 +63,8 @@
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Process<span class="caret"></span></a>
                   <ul class="dropdown-menu">
-                    <li><a href="../start-business.html">Starting a Business</a></li>
-                    <li><a href="../foreign-investment.html">Foreign Investment</a></li>
+                    <li><a href="start-business.html">Starting a Business</a></li>
+                    <li><a href="foreign-investment.html">Foreign Investment</a></li>
                   </ul>
                 </li>
 
