--- a/why-palau.html
+++ b/why-palau.html
@@ -51,8 +51,8 @@
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Why Palau?<span class="caret"></span></a>
                   <ul class="dropdown-menu">
-                    <li><a href="why-palau.html">Overview</a></li>
-                    <li><a href="#">Infrastructure</a></li>
+                    <li><a href="#">Overview</a></li>
+                    <li><a href="infrastructure.html">Infrastructure</a></li>
                     <li><a href="incentives.html">Incentives</a></li>
                   </ul>
                 </li>
