fixed why-palau.html and added links

--- a/process/environmental.html
+++ b/process/environmental.html
@@ -129,7 +129,7 @@
           <h2>Requirements</h2>
           <p>You or your designated agent must:</p>
           <ol>
-            <li>Submit an application to the Environmental Quality Preservation Board (EQPB) for an earth-moving permit.</li>
+            <li>Submit an application to the Environmental Quality Preservation Board (EQPB) for an earth-moving permit. Part I of the application is available <a href="../applications/national/eqpb/eqpb-general-information.pdf">here</a>. Part II of the application is available <a href="../applications/national/eqpb/eqpb-earthmoving-permit.pdf">here</a>.</li>
             <li>If required by the EQPB, contracts with a local business to perform and receive an Environmental Impact Statement (EIS) (costs may vary by the scope of the project). For projects that do not require an EIA, the process for approval takes approximately 17 working days. For projects requiring an EIA or EIS, allow 45 working days.</li>
           </ol>
           <h2>Materials</h2>
