--- a/process/immigration-labor.html
+++ b/process/immigration-labor.html
@@ -130,9 +130,9 @@
           <p>You or your designated agent must:</p>
           <ol>
             <li>Apply for an investor's travel visa from the Department of Immigration, if needed.</li>
-            <li>Register your company's Palauan employees with the Palauan Social Security Administration and obtain an employer identification number (EIN).
+            <li>Register your company's Palauan employees with the Palauan Social Security Administration and obtain an employer identification number (EIN), available <a href="../applications/national/employee-number-application.pdf" target="_blank">here</a>.
             </li>
-            <li>Completer an application with the Bureau of Labor to receive approval to employ non-Palauan workers, if needed.
+            <li>Completer an application with the Bureau of Labor to receive approval to employ non-Palauan workers, if needed. The nonresident worker application is available <a href="../applications/national/nonresident-worker-application.pdf" target="_blank">here</a>.
             </li>
           </ol>
           <h2>Materials</h2>
