--- a/process/title-cultural-affairs.html
+++ b/process/title-cultural-affairs.html
@@ -131,9 +131,9 @@
           <ol>
             <li>Conduct a title search and obtain an agreement between your business owner and titleholder.
             </li>
-            <li>Submit an application (Project Work Order) to the National Bureau of Land and Survey requesting clearance. Allow four working days for clearance to be issued.
+            <li>Submit an application (Project Work Order) to the National Bureau of Land and Survey requesting clearance. Allow four working days for clearance to be issued. The application is available <a href="../applications/national/project-work-order.pdf" target="_blank">here</a>.
             </li>
-            <li>Submit an application to the Ministry of Cultural Affairs requesting clearance.
+            <li>Submit an application to the Ministry of Cultural Affairs requesting clearance, available <a href="../applications/national/historical-clearance.pdf" target="_blank">here</a>.
             </li>
           </ol>
           <h2>Materials</h2>
