--- a/process/utilities.html
+++ b/process/utilities.html
@@ -132,6 +132,7 @@
             <li>Establish a business account with the Palau Public Utilities Corporation (PPUC) for electricity, water, and sewage services.</li>
             <li>Request temporary connection for the duration of building construction.</li>
             <li>Request permanent connection (and meter location) at least one week prior to date of business opening.</li>
+            <li>The PPUC Application is available <a href="../applications/national/ppuc-application.pdf">here</a>.</li>
           </ol>
           <h2>Materials</h2>
           <p>Donec id elit non mi porta gravida at eget metus.</p>
