--- a/resources/all-applications.html
+++ b/resources/all-applications.html
@@ -130,142 +130,143 @@
           </p>
           <h2>National Forms</h2>
           <ul>
-            <li><a href="../applications/national/national-business-license.pdf">
+            <li><a href="../applications/national/national-business-license.pdf" target="_blank">
               Application For A Business License
             </a></li>
-            <li><a href="../applications/national/domestic-corporation.pdf">
+            <li><a href="../applications/national/domestic-corporation.pdf" target="_blank">
               Information Required For Forming A Domestic Corporation
             </a></li>
-            <li><a href="../applications/national/partnership-application.pdf">
+            <li><a href="../applications/national/partnership-application.pdf" target="_blank">
               Partnership Registration Statement
             </a></li>
-            <li><a href="../applications/national/fib-requirement.pdf">
+            <li><a href="../applications/national/fib-requirement.pdf" target="_blank">
               Foreign Investment Bureau Basic Requirement For Establishing A Business In Palau
             </a></li>
-            <li><a href="../applications/national/fiac.pdf">
+            <li><a href="../applications/national/fiac.pdf" target="_blank">
               Foreign Investment Approval Certificate Application Form
             </a></li>
-            <li><a href="../applications/national/employee-number-application.pdf">
+            <li><a href="../applications/national/employee-number-application.pdf" target="_blank">
               EIN Application
             </a></li>
-            <li><a href="../applications/national/business-licence.pdf">
+            <li><a href="../applications/national/business-licence.pdf" target="_blank">
               Application For A Business License
             </a></li>
-            <li><a href="../applications/national/permit-to-enter.pdf">
+            <li><a href="../applications/national/permit-to-enter.pdf" target="_blank">
               Application For A Permit To Enter And Work As An Investor
             </a></li>
-            <li><a href="../applications/national/nonresident-worker-application.pdf">
+            <li><a href="../applications/national/nonresident-worker-application.pdf" target="_blank">
               Nonresident Worker Application
             </a></li>
-            <li><a href="../applications/national/nonresident-worker-renewal.pdf">
+            <li><a href="../applications/national/nonresident-worker-renewal.pdf" target="_blank">
               Application For The Extension of a Work Permit For A Nonresident Worker
             </a></li>
-            <li><a href="../applications/national/ssn-application.pdf">
+            <li><a href="../applications/national/ssn-application.pdf" target="_blank">
               Employee Social Security Registration
             </a></li>
-            <li><a href="../applications/national/job-vacancy.pdf">
+            <li><a href="../applications/national/job-vacancy.pdf" target="_blank">
               Job Vacancy Announcement
             </a></li>
-            <li><a href="../applications/national/project-work-order.pdf">
+            <li><a href="../applications/national/project-work-order.pdf" target="_blank">
               Bureau of Lands and Surveys Project Work Order
             </a></li>
-            <li><a href="../applications/national/historical-clearance.pdf">
+            <li><a href="../applications/national/historical-clearance.pdf" target="_blank">
               Application For Historic Clearance
             </a></li>
-            <li><a href="../applications/national/eqpb/eqpb-earthmoving-checklist.pdf">
+            <li><a href="../applications/national/eqpb/eqpb-earthmoving-checklist.pdf" target="_blank">
               Environmental Quality Protection Board (EQPB) Earthmoving Application Checklist
             </a></li>
-            <li><a href="../applications/national/eqpb/eqpb-general-information.pdf">
+            <li><a href="../applications/national/eqpb/eqpb-general-information.pdf" target="_blank">
               Environmental Quality Protection Board (EQPB) Permit Application
             </a></li>
-            <li><a href="../applications/national/eqpb/eqpb-earthmoving-permit.pdf">
+            <li><a href="../applications/national/eqpb/eqpb-earthmoving-permit.pdf" target="_blank">
               Environmental Quality Protection Board (EQPB) Earthmoving Permit
             </a></li>
             <!--add links and the other eqpb applications
             ====================================================
             ===-->
-            <li><a href="../applications/national/ppuc-application.pdf">
+            <li><a href="../applications/national/ppuc-application.pdf" target="_blank">
               Palau Public Utilities Corporation
               (PPUC) Application
             </a></li>
           </ul>
           <h2>State Forms</h2>
           <ul>
-            <li><a href="../applications/state/aimeliik/aimeliik-business-license.pdf">
+            <li><a href="../applications/state/aimeliik/aimeliik-business-license.pdf" target="_blank">
               Aimeliik State Business License
             </a></li>
-            <li><a href="../applications/state/aimeliik/aimeliik-building permit.pdf">
+            <li><a href="../applications/state/aimeliik/aimeliik-building permit.pdf" target="_blank">
               Aimeliik State Building Permit
             </a></li>
-            <li><a href="../applications/state/airai/airai-business-license.pdf">
+            <li><a href="../applications/state/airai/airai-business-license.pdf" target="blank">
               Airai State Business License
             </a></li>
-            <li><a href="../applications/state/airai/airai-building-permit.pdf">
+            <li><a href="../applications/state/airai/airai-building-permit.pdf" target="_blank">
               Airai State Building Permit
             </a></li>
-            <li><a href="../applications/state/angaur/angaur-business-license.pdf">
+            <li><a href="../applications/state/angaur/angaur-business-license.pdf" target="_blank">
               Angaur State Business License
             </a></li>
             <li><a href="">
               Hatohobei State Business License
             </a></li>
-            <li><a href="../applications/state/kayangel/kayangel-business-license.pdf">
+            <li><a href="../applications/state/kayangel/kayangel-business-license.pdf" target="_blank">
               Kayangel State Business License
             </a></li>
-            <li><a href="../applications/state/koror/koror-business-license.pdf">
+            <li><a href="../applications/state/koror/koror-business-license.pdf" target="_blank">
               Koror State Business License
             </a></li>
-            <li><a href="../applications/state/koror/koror-building-zoning-permit.pdf">
+            <li><a href="../applications/state/koror/koror-building-zoning-permit.pdf" target="_blank">
               Koror State Building and Zoning Permit
             </a></li>
             <li><a href="">
               Koror State Signage Permit
             </a></li>
-            <li><a href="../applications/state/koror/koror-checklist.pdf">
+            <li><a href="../applications/state/koror/koror-checklist.pdf" target="_blank">
               Koror State Building and Zoning Checklist
-            <li><a href="../applications/state/melekeok/melekeok-business-license.pdf">
+            </a></li>
+            <li><a href="../applications/state/melekeok/melekeok-business-license.pdf" target="_blank">
               Melekeok State Business License
             </a></li>
-            <li><a href="../applications/state/melekeok/melekeok-building-permit.pdf">
+            <li><a href="../applications/state/melekeok/melekeok-building-permit.pdf" target="_blank">
               Melekeok State Building Permit
             </a></li>
-            <li><a href="../applications/state/ngaraard/ngaraard-buisness-license.pdf">
+            <li><a href="../applications/state/ngaraard/ngaraard-buisness-license.pdf" target="_blank">
               Ngaraard State Business License
             </a></li>
-            <li><a href="../applications/state/ngaraard/ngaraard-building-permit.pdf">
+            <li><a href="../applications/state/ngaraard/ngaraard-building-permit.pdf" target="_blank">
               Ngaraard State Building Permit
             </a></li>
-            <li><a href="../applications/state/ngarchelong/ngarchelong-business-license.pdf">
+            <li><a href="../applications/state/ngarchelong/ngarchelong-business-license.pdf" target="_blank">
               Ngarchelong State Business License
             </a></li>
-            <li><a href="../applications/state/ngarchelong/narchelong-building-perpmit.pdf">
+            <li><a href="../applications/state/ngarchelong/narchelong-building-perpmit.pdf" target="_blank">
               Ngarchelong State Building Permit
             </a></li>
-            <li><a href="../applications/state/ngardmau/ngardmau-business-license.pdf">
+            <li><a href="../applications/state/ngardmau/ngardmau-business-license.pdf" target="_blank">
               Ngardmau State Business License
             </a></li>
-            <li><a href="../applications/state/ngardmau/ngardmau-building-permit.pdf">
+            <li><a href="../applications/state/ngardmau/ngardmau-building-permit.pdf" target="_blank">
               Ngardmau State Building Permit
             </a></li>
-            <li><a href="../applications/state/ngeremlengui/ngeremlengui-business-license.pdf">
+            <li><a href="../applications/state/ngeremlengui/ngeremlengui-business-license.pdf" target="_blank">
               Ngeremlengui State Business License
             </a></li>
-            <li><a href="../applications/state/ngeremlengui/ngeremlengui-building-permit.pdf">
+            <li><a href="../applications/state/ngeremlengui/ngeremlengui-building-permit.pdf" target="_blank">
               Ngeremlengui State Building Permit
             </a></li>
-            <li><a href="../applications/state/ngatpang/ngatpang-business-license.pdf">
+            <li><a href="../applications/state/ngatpang/ngatpang-business-license.pdf" target="_blank">
               Ngatpang State Business License
             </a></li>
-            <li><a href="../applications/state/ngchesar/ngchesar-business-license.pdf">
+            <li><a href="../applications/state/ngchesar/ngchesar-business-license.pdf" target="_blank">
               Ngchesar State Business License
             </a></li>
-            <li><a href="../applications/state/ngiwal/ngiwal-business-license.pdf">
+            <li><a href="../applications/state/ngiwal/ngiwal-business-license.pdf" target="_blank">
               Ngiwal State Business License
             </a></li>
-            <li><a href="../applications/state/peleliu/peleliu-business-license.pdf">
+            <li><a href="../applications/state/peleliu/peleliu-business-license.pdf" target="_blank">
               Peleliu State Business License
             </a></li>
-            <li><a href="../applications/state/peleliu/peleliu-building-permit.pdf">
+            <li><a href="../applications/state/peleliu/peleliu-building-permit.pdf" target="_blank">
               Peleliu State Building Permit
             </a></li>
             <li><a href="">
