--- a/why-palau.html
+++ b/why-palau.html
@@ -140,26 +140,31 @@
       <li>No personal income tax</li>
     </ul>
     <h2>Infrastructure</h2>
-    <ul>Roman Tmetuchl International Airport
+    <h3>Roman Tmetuchl International Airport</h3>
+    <ul>
       <li>XX international commercial flights daily.</li>
       <li>Direct flights to Guam, Seoul, Taipei and Manila, with connections worldwide.</li>
       <li>Complete, efficient freight-handling capabilities, processing XX tons of air cargo annually.</li>
     </ul>
-    <ul>Modern port facilities in Malakal
+    <h3>Modern port facilities in Malakal</h3>
+    <ul>
       <li>Xxx tons of cargo landed annually</li>
       <li>Advantageously located on all Indo-Asian shipping lanes</li>
     </ul>
-    <ul>Transportation
+    <h3>Transportation</h3>
+    <ul>
       <li>Quick and easy country-wide distribution network facilitated by:</li>
       <li>Xxx miles of highway and improved roads</li>
       <li>xx passenger and cargo ferries daily</li>
     </ul>
-    <ul>Telecommunications
+    <h3>Telecommunications</h3>
+    <ul>
       <li>New fiber-optic cable with xxxx capacity</li>
       <li>High-speed internet</li>
       <li>Internet TLD: .pw</li>
     </ul>
-    <ul>Utilities
+    <h3>Utilities</h3>
+    <ul>
       <li>Electricity</li>
       <li>Modern-era electrical grid with a nationwide capacity of xxxx kW</li>
       <li>120V, 60Hz (North American plug)</li>
