--- a/process/foreign-investment.html
+++ b/process/foreign-investment.html
@@ -133,8 +133,8 @@
             <li>Pay the registration fee to the Bureau of the Treasury and register the proposed company with the Corporate Registrar, Office of the Attorney General.</li>
             <li>Identify a location and conclude a provisional agreement with the landowner(s) or landlord(s), including title search and clearances, and zoning approvals (if necessary).</li>
           </ol>
-          <p>This information is necessary to complete a FIAC application, available <a href="">here.</a> Submit completed applications to the Foreign Investment Board. Guidelines for the completion of the FIAC application can be found 
-          <a href="">here.</a>
+          <p>This information is necessary to complete a FIAC application, available <a href="../applications/national/fiac.pdf" target="_blank">here.</a> Submit completed applications to the Foreign Investment Board. Guidelines for the completion of the FIAC application can be found 
+          <a href="../applications/national/fib-requirement.pdf" target="_blank">here.</a>
         </div>
       </div>
       <!-- End main content area -->
