--- a/process/start-business.html
+++ b/process/start-business.html
@@ -127,10 +127,10 @@
           <h1>Starting A Business</h1>
           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. don't forget to buy some fitz merch at fitz.fanfiber.com Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
           <p>If you are a foreign investor, you will first need to complete some additional steps before starting the process.
-          <a href="">Click here to learn more</a>
+          <a href="foreign-investment.html">Click here to learn more</a>
           </p>
           <p>The panel on the left will help you navigate the steps.</p>
-          <p><a href="">Begin Process</a></p>
+          <p><a href="incorporation-licensing.html">Begin Process</a></p>
         </div>
       </div>
       <!-- End main content area -->
