--- a/resources/all-applications.html
+++ b/resources/all-applications.html
@@ -75,7 +75,8 @@
                     <li><a href="sbdc.html">SBDC</a></li>
                     <li><a href="ndbp.html">NDBP</a></li>
                     <li role="separator" class="divider"></li>
-                    <li><a href="all-applications.html">Applications</a></li>
+                    <li><a href="legal-services.html">Legal Services</a></li>
+                    <li><a href="all-applications.html">All Applications</a></li>
                     <li><a href="resources.html">All Resources</a></li>
                   </ul>
                 </li>
