--- a/resources/legal-services.html
+++ b/resources/legal-services.html
@@ -75,8 +75,8 @@
                     <li><a href="resources/sbdc.html">SBDC</a></li>
                     <li><a href="resources/ndbp.html">NDBP</a></li>
                     <li role="separator" class="divider"></li>
-                    <li><a href="resources/legal-services.html">Legal Services</a></li>
-                    <li><a href="resources/all-applications.html">All Applications</a></li>
+                    <li><a href="#">Legal Services</a></li>
+                    <li><a href="resources/all-applications.html">Applications</a></li>
                     <li><a href="resources/resources.html">All Resources</a></li>
                   </ul>
                 </li>
@@ -89,7 +89,7 @@
       <!-- Main content area -->
 <div class="row">
     <div class="col-md-12">
-    <h1>Businesses Good For Palau</h1>
+    <h1>Legal Services</h1>
     </div>
 </div>
 <div class="row">
@@ -103,10 +103,7 @@
     </div>
 </div>
 <div class="row">
-    <div class="col-md-5">
-    <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
-    </div>
-    <div class="col-md-7">
+    <div class="col-md-12">
     <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. buy some fitz merch at fitz.fanfiber.com. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
     </div>
 </div>
