--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
                     <li><a href="resources/sbdc.html">SBDC</a></li>
                     <li><a href="resources/ndbp.html" target="_blank">NDBP</a></li>
                     <li role="separator" class="divider"></li>
-                    <li><a href="resources/all-applications.html">Applications</a></li>
+                    <li><a href="resources/legal-services.html">Legal Services</a></li>
+                    <li><a href="resources/all-applications.html">All Applications</a></li>
                     <li><a href="resources/resources.html">All Resources</a></li>
                   </ul>
                 </li>
@@ -104,7 +105,7 @@
       </ol>
       <div class="carousel-inner" role="listbox">
         <div class="item active">
-          <img class="first-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="First slide">
+          <img class="first-slide" src="images/president-slider.jpg" alt="First slide">
           <div class="container">
             <div class="carousel-caption">
               <!-- <h1>Message from the President</h1> -->
@@ -120,16 +121,6 @@
               <h1>Investments Palau Values</h1>
               <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
               <p><a class="btn btn-sm btn-default" href="#" role="button">Learn more</a></p>
-            </div>
-          </div>
-        </div>
-        <div class="item">
-          <img class="third-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Third slide">
-          <div class="container">
-            <div class="carousel-caption">
-              <h1>Why Palau?</h1>
-              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-              <p><a class="btn btn-lg btn-primary" href="president-message.html" role="button">Browse gallery</a></p>
             </div>
           </div>
         </div>
