--- a/process/immigration-labor.html
+++ b/process/immigration-labor.html
@@ -75,7 +75,8 @@
                     <li><a href="../resources/sbdc.html">SBDC</a></li>
                     <li><a href="../resources/ndbp.html">NDBP</a></li>
                     <li role="separator" class="divider"></li>
-                    <li><a href="../resources/all-applications.html">Applications</a></li>
+                    <li><a href="../resources/legal-services.html">Legal Services</a></li>
+                    <li><a href="../resources/all-applications.html">All Applications</a></li>
                     <li><a href="../resources/resources.html">All Resources</a></li>
                   </ul>
                 </li>
