--- a/resources/ndbp.html
+++ b/resources/ndbp.html
@@ -75,6 +75,7 @@
                     <li><a href="sbdc.html">SBDC</a></li>
                     <li><a href="ndbp.html">NDBP</a></li>
                     <li role="separator" class="divider"></li>
+                    <li><a href="legal-services.html">Legal Services</a></li>
                     <li><a href="all-applications.html">Applications</a></li>
                     <li><a href="resources.html">All Resources</a></li>
                   </ul>
