--- a/resources/legal-services.html
+++ b/resources/legal-services.html
@@ -43,7 +43,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="index.html">Website Name </a>
+            <a class="navbar-brand" href="../index.html">Website Name </a>
           </div>
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
@@ -51,33 +51,33 @@
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Why Palau?<span class="caret"></span></a>
                   <ul class="dropdown-menu">
-                    <li><a href="why-palau.html">Overview</a></li>
-                    <li><a href="infrastructure.html">Infrastructure</a></li>
-                    <li><a href="incentives.html">Incentives</a></li>
+                    <li><a href="../why-palau.html">Overview</a></li>
+                    <li><a href="../infrastructure.html">Infrastructure</a></li>
+                    <li><a href="../incentives.html">Incentives</a></li>
                   </ul>
                 </li>
 
                 <!-- <li class="active"><a href="#">Business Types</a></li> -->
-                <li><a href="business-types.html">Business Types</a></li>
+                <li><a href="../business-types.html">Business Types</a></li>
 
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Process<span class="caret"></span></a>
                   <ul class="dropdown-menu">
-                    <li><a href="process/start-business.html">Starting a Business</a></li>
-                    <li><a href="process/foreign-investment.html">Foreign Investment</a></li>
+                    <li><a href="../process/start-business.html">Starting a Business</a></li>
+                    <li><a href="../process/foreign-investment.html">Foreign Investment</a></li>
                   </ul>
                 </li>
 
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Resources<span class="caret"></span></a>
                   <ul class="dropdown-menu">
-                    <li><a href="resources/pcoc.html">PCOC</a></li>
-                    <li><a href="resources/sbdc.html">SBDC</a></li>
-                    <li><a href="resources/ndbp.html">NDBP</a></li>
+                    <li><a href="pcoc.html">PCOC</a></li>
+                    <li><a href="sbdc.html">SBDC</a></li>
+                    <li><a href="ndbp.html">NDBP</a></li>
                     <li role="separator" class="divider"></li>
                     <li><a href="#">Legal Services</a></li>
-                    <li><a href="resources/all-applications.html">Applications</a></li>
-                    <li><a href="resources/resources.html">All Resources</a></li>
+                    <li><a href="all-applications.html">Applications</a></li>
+                    <li><a href="resources.html">All Resources</a></li>
                   </ul>
                 </li>
 
