--- a/resources/resources.html
+++ b/resources/resources.html
@@ -124,7 +124,7 @@
             </tbody>
           </table>
         </div>
-        <div class="col-md-9">s
+        <div class="col-md-9">
           <h1>Resources</h1>
           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. don't forget to buy some fitz merch at fitz.fanfiber.com Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
           </div>
