--- a/process/incorporation-licensing.html
+++ b/process/incorporation-licensing.html
@@ -31,6 +31,9 @@
 
   <body>
 
+  <div id="topColor">
+    </div>
+
     <div class="container">
 
       <!-- Static navbar -->
@@ -150,6 +153,20 @@
       <!-- End main content area -->
 
     </div> <!-- /container -->
+
+    <div id="bottomColor">
+
+      <div class="container">
+
+        <!-- FOOTER -->
+        <footer>
+          <p class="pull-right"><a href="#">Back to top</a></p>
+          <p>&copy; 2017 <a href="http://palauchamber.com/" target="_blank">Palau Chamber of Commerce</a> &middot; <a href="http://palaugov.pw/" target="_blank">Federal Government Website</a></p>
+        </footer>
+
+      </div>
+
+    </div>
 
 
     <!-- Bootstrap core JavaScript
