--- a/process/start-business.html
+++ b/process/start-business.html
@@ -91,7 +91,7 @@
 
       <!-- Main content area -->
       <div class="row">
-        <div class="col-md-3">
+        <div id="process-nav" class="col-md-3">
           <table class="table process-table">
             <tbody>
               <tr class="clickable-row" data-href="incorporation-licensing.html">
@@ -127,8 +127,9 @@
             </tbody>
           </table>
         </div>
-        <div class="col-md-9">
-          <h1>Starting A Business</h1>
+
+        <div class="col-md-7 col-md-offset-1">
+          <h1 class="title">Starting A Business</h1>
           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. don't forget to buy some fitz merch at fitz.fanfiber.com Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
           <p>If you are a foreign investor, you will first need to complete some additional steps before starting the process.
           <a href="foreign-investment.html">Click here to learn more</a>
@@ -159,8 +160,8 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="js/jquery.min.js"><\/script>')</script>
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script> -->
+    <script>window.jQuery || document.write('<script src="../js/jquery.min.js"><\/script>')</script>
     <script src="../js/bootstrap.min.js"></script>
     <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
     <script src="../js/holder.min.js"></script>
